<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  app:startDestination="@+id/navigation_home">

  <fragment
    android:id="@+id/navigation_home"
    android:name="com.waffiq.bazz_movies.feature.home.ui.fragment.HomeFragment"
    android:label="@string/title_home"
    tools:layout="@layout/fragment_featured" />

  <fragment
    android:id="@+id/navigation_search"
    android:name="com.waffiq.bazz_movies.feature.search.ui.SearchFragment"
    android:label="@string/title_search"
    tools:layout="@layout/fragment_search" />

  <fragment
    android:id="@+id/navigation_favorite"
    android:name="com.waffiq.bazz_movies.feature.favorite.ui.fragment.FavoriteFragment"
    android:label="@string/title_favorite"
    tools:layout="@layout/fragment_parent" />

  <fragment
    android:id="@+id/navigation_watchlist"
    android:name="com.waffiq.bazz_movies.feature.watchlist.ui.fragment.WatchlistFragment"
    android:label="@string/title_watchlist"
    tools:layout="@layout/fragment_parent" />

  <fragment
    android:id="@+id/navigation_more"
    android:name="com.waffiq.bazz_movies.feature.more.ui.MoreFragment"
    android:label="@string/title_more"
    tools:layout="@layout/fragment_more" />
</navigation>