<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <androidx.fragment.app.FragmentContainerView
    android:id="@+id/nav_host_fragment_activity_home"
    android:name="androidx.navigation.fragment.NavHostFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_900"
    app:defaultNavHost="true"
    app:navGraph="@navigation/mobile_navigation" />

  <com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/bottom_navigation"
    style="@style/Widget.App.BottomNavigationView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    app:elevation="0dp"
    app:iconLabelHorizontalSpacing="0dp"
    app:itemHorizontalTranslationEnabled="false"
    app:itemIconSize="20dp"
    app:itemIconTint="@color/bottom_nav_color"
    app:itemPaddingBottom="4dp"
    app:itemPaddingTop="6dp"
    app:itemRippleColor="@color/gray_600_alpha"
    app:itemTextColor="@color/bottom_nav_color"
    app:labelMaxLines="1"
    app:labelVisibilityMode="labeled"
    app:menu="@menu/bottom_nav_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>